# hello

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
hello/scripts/: say_hello.py
