[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Anton Borisov <antobis1983@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
